@@ -3,6 +3,7 @@
 ### 1.8.1
 * Fix - Avoided use a return function inside the PHP function "empty" (compatibility with PHP 5.5 and lower)
 * Fix - Compatibility with WPML 3.6
+* Fix - Fixed Sensei redirect for lessons archive
 
 ### 1.8.0
 * Made LSX compatible (visual) with Ninja Forms
